# AAL_project

./: CMakeLists.txt  MyAlgorithm.cpp  Point.cpp  README.md  Vertex.cpp  main.cpp  test.sh
include/: MyAlgorithm.h  Point.h  PointsGenerator.h  Types.h  Vertex.h
raport/: example_set_for_validation.txt  out.txt  raport.ipynb
src/: CMakeLists.txt  MyAlgorithm.cpp  Point.cpp  PointsGenerator.cpp  Vertex.cpp  main.cpp
